[project]
name = "example_package_kpuyam"
version = "0.0.1"
authors = [
  { name="Kelvin Puyam", email="kelvin.puyam@tigeranalytics.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kpuyam/packaging_tutorial"
Issues = "https://github.com/kpuyam/packaging_tutorial/issues"